--- a/Medical-History-master/app/src/main/res/layout/activity_sign_in.xml
+++ b/Medical-History-master/app/src/main/res/layout/activity_sign_in.xml
@@ -76,7 +76,7 @@
                 android:drawableTint="#BAE91E63"
                 android:ems="10"
                 android:foregroundTint="@color/colorBorder"
-                android:hint="(Please enter a username)"
+                android:hint="(Please enter a email)"
                 android:singleLine="true"
                 android:textColor="#FFFFFF"
                 android:textColorHighlight="#FDFAFA"
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="sans-serif-smallcaps"
-                android:text="Username"
+                android:text="Email"
                 android:textColor="#000000" />
 
             <Space
@@ -121,6 +121,13 @@
 
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
         <Button
             android:id="@+id/signInButton"
             android:layout_width="216dp"
@@ -136,14 +143,16 @@
             android:layout_height="23dp"
             android:background="#E91E5E" />
 
-        <Button
-            android:id="@+id/BackButton"
-            android:layout_width="216dp"
+        <TextView
+            android:id="@+id/signUpTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#9E737B"
-            android:text="Main Menu"
-            android:textColor="#FFFF" />
+            android:gravity="center"
+            android:minHeight="48dp"
+            android:padding="16dp"
+            android:text="Sign up"
+            android:clickable="true" />
 
         <Space
             android:layout_width="match_parent"
