--- a/Medical-History-master/app/src/main/res/layout/nav_header_main.xml
+++ b/Medical-History-master/app/src/main/res/layout/nav_header_main.xml
@@ -1,56 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:gravity="bottom"
-    android:orientation="vertical"
+    android:layout_height="200dp"
+    android:background="#BCCCA5"
+    android:gravity="bottom|center"
+    android:orientation="horizontal"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="20dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="0dp"
-    android:background="#BCCCA5"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:contentDescription="@string/nav_header_desc"
+        android:paddingTop="0dp"
+        app:srcCompat="@drawable/sunflower" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="128dp"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="120dp"
-            android:layout_height="100dp"
-            android:paddingTop="0dp"
-            android:contentDescription="@string/nav_header_desc"
-            app:srcCompat="@drawable/sunflower" />
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingStart="10dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="User"
+            tools:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:paddingTop="@dimen/nav_header_vertical_spacing"-->
-<!--                android:text="@string/user_name"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />-->
-
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="@string/dob"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/textView"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:fontFamily="sans-serif-black"-->
-<!--                android:text="@string/email"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
-        </LinearLayout>
+        <TextView
+            android:id="@+id/emailTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="TEST" />
     </LinearLayout>
+
 </LinearLayout>
